[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["postgres", "macros"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
