[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
derive_builder = "0.12.0"
jsonwebtoken = "8.3.0"
sqlx = "0.7.2"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
